noinst_LTLIBRARIES = libgsk-dns.la
pkginclude_dnsdir = $(includedir)/gsk-1.0/gsk/dns

INCLUDES = @GLIB_CFLAGS@ @GSK_DEBUG_CFLAGS@

libgsk_dns_la_SOURCES = \
gskdns.c \
gskdnsclient.c \
gskdnslocalresolver.c \
gskdnsresolver.c \
gskdnsrrcache.c \
gskdnsserver.c

pkginclude_dns_HEADERS = \
gskdns.h \
gskdnsclient.h \
gskdnslocalresolver.h \
gskdnsresolver.h \
gskdnsrrcache.h \
gskdnsserver.h
