noinst_LTLIBRARIES = libgsk-store.la
pkginclude_storedir = $(includedir)/gsk-1.0/gsk/store

INCLUDES = @GLIB_CFLAGS@ @GSK_DEBUG_CFLAGS@

libgsk_store_la_SOURCES = \
gskasynccache.c \
gskfilestreammap.c \
gskgtypeloader.c \
gskstorageformat.c \
gskstore.c \
gskstreammap.c \
gskvaluerequest.c \
gskxmlformat.c \
gskxmlvaluereader.c \
gskxmlvaluewriter.c

pkginclude_store_HEADERS = \
gskasynccache.h \
gskfilestreammap.h \
gskgtypeloader.h \
gskstorageformat.h \
gskstore.h \
gskstreammap.h \
gskvaluerequest.h \
gskxmlformat.h \
gskxmlvaluereader.h \
gskxmlvaluewriter.h
