noinst_LTLIBRARIES = libgsk-url.la
pkginclude_urldir = $(includedir)/gsk-1.0/gsk/url
INCLUDES = @GLIB_CFLAGS@ @GSK_DEBUG_CFLAGS@
libgsk_url_la_SOURCES = gskurl.c gskurl-download.c gskurltransfer.c gskurltransferhttp.c gskurltransferfile.c gskurltransfer-builtins.c
pkginclude_url_HEADERS = gskurl.h gskurltransfer.h gskurltransferhttp.h gskurltransferfile.h
